Issue #SB-21450 feat: align button right

--- a/src/assets/styles/themeable.scss
+++ b/src/assets/styles/themeable.scss
@@ -710,6 +710,7 @@ html[data-theme="JOYFUL"]{
       }
       .sbchapter__play__btn{
         color: var(--app-primary) !important;
+        margin-left: auto;
       }
     }
 
